# first-fit-heap

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: heap.hpp  heap_config.hpp
test/: Makefile  main.cpp  test.hpp
